--- a/manuscripts/child-documents/introduction.Rmd
+++ b/manuscripts/child-documents/introduction.Rmd
@@ -9,7 +9,11 @@ An important question underlying each of these investigations---both for its pra
 
 In order to observe network variants reliably, previous research has used highly sampled functional magnetic resonance imaging data first analyzed within individuals before making comparisons between individuals [@elliottetal_GeneralFunctionalConnectivity_2019; @gordonetal_PrecisionFunctionalMapping_2017; @laumannetal_FunctionalSystemAreal_2015; cf. @elliottetal_WhatTestRetestReliability_2020]. Analyzing data without this first step, for example by averaging activation maps across individuals voxel-wise, will obscure network variants, leaving only what is common between individuals [@grattonetal_FunctionalBrainNetworks_2018; @speelmanmcgann_HowMeanMean_2013]. This may cause substantial and relevant portions of variability in whole brain functional networks to be missed [@grattonetal_FunctionalBrainNetworks_2018], resulting in unreliable inferences about the ways in which whole brain functional networks differ between individuals [@elliottetal_WhatTestRetestReliability_2020]. Similarly, although the common features of whole brain functional networks can typically be detected with 5-10 minutes of functional magnetic resonance imaging data when averaging across individuals, more than 25 minutes of data (collected continuously or across multiple scans) are needed to reliably detect network variants [@andersonetal_ReproducibilitySingleSubjectFunctional_2011; @elliottetal_GeneralFunctionalConnectivity_2019; @gordonetal_PrecisionFunctionalMapping_2017; @hackeretal_RestingStateNetwork_2013; @laumannetal_FunctionalSystemAreal_2015]. Due to the high cost of scan times, this level of measurement is not feasible for a majority of labs collecting their own data [@elliottetal_GeneralFunctionalConnectivity_2019]. In sum, network variants offer a promising new direction for deepening our understanding of whole brain functional networks, but the conditions required to study them reliably using functional magnetic resonance imaging are a considerable practical barrier. 
 
-<!-- I feel like I should maybe talk about what EEG is more here, like in the intro of miljevicetal_EEGconnectivityFundamentalGuide_2021 -->
+<!--
+I feel like I should maybe talk about what EEG is more here, like in the intro of miljevicetal_EEGconnectivityFundamentalGuide_2021 
+
+It would be good to contrast with BOLD signal too
+-->
 
 A natural solution to this barrier is to explore the feasibility of lower cost neuroimaging modalities for investigating network variants beyond the window of functional magnetic resonance imaging. Electrophysiological recording methods such as electroencephalography (EEG) offer one such solution, given their cost effectiveness relative to functional magnetic resonance imaging, and their ability to directly measure whole brain functional networks in real time (at the cost of limited spatial resolution) [see @oneilletal_DynamicsLargescaleElectrophysiological_2018]. The temporal resolution of EEG is particularly relevant, as the temporal aspects of network variants are a growing area of interest in the functional magnetic resonance imaging literature [e.g., @vandevilleetal_WhenMakesYou_2021]. Although EEG does not have precise spatial resolution in comparison to functional magnetic resonance imaging, numerous studies have demonstrated that measures of electrophysiological connectivity show spatial similarity to the functional connectivity commonly observed with functional magnetic resonance imaging regardless of temporal scale [see @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020]. Given this, similar network variants to those identified with functional magnetic resonance imaging should be identifiable with EEG. However, the vast majority of work using EEG to study whole brain functional networks focuses on group-level approaches, so the feasibility of using EEG to study network variants is largely unknown. 
 
