--- a/manuscripts/child-documents/methods.Rmd
+++ b/manuscripts/child-documents/methods.Rmd
@@ -8,16 +8,19 @@ In this study, we used EEG data previously collected by our lab as part of a lar
 
 ```{r demographic-descriptives}
 tar_load(participant_descriptives)
-tar_load(participant_descriptives_final)
 ```
 
 Data from `r xfun::numbers_to_words(participant_descriptives$n)` healthy adults (`r participant_descriptives$male` males, `r participant_descriptives$female` females) whose ages ranged from `r participant_descriptives$years_age_min` to `r participant_descriptives$years_age_max` years (M = `r papaja::apa_num(participant_descriptives$years_age_mean)`, SD = `r papaja::apa_num(participant_descriptives$years_age_sd)`) and whose years of education ranged from `r participant_descriptives$years_education_min` to `r participant_descriptives$years_education_max` years (M = `r papaja::apa_num(participant_descriptives$years_education_mean)`, SD = `r papaja::apa_num(participant_descriptives$years_education_sd)`) was collected as part of the larger study mentioned above. All participants were right handed, spoke English as a first language, and had normal or corrected-to-normal vision. No participants had a history of neurological disease or disorder, mental illness, head trauma, alcoholism or drug abuse, or use of psychotropic medications within the last two years preceding data collection. Three participants were excluded from analyses because they did not participate in the final session; one participant was excluded because their data from the final session was lost; and three participants were excluded because they had one or more recordings that were of an unusable quality.
+
+```{r demographic-descriptives-final}
+tar_load(participant_descriptives_final)
+```
 
 The final sample used for analysis consisted of `r xfun::numbers_to_words(participant_descriptives_final$n)` participants (`r participant_descriptives_final$male` males, `r participant_descriptives_final$female` females) whose ages ranged from `r participant_descriptives_final$years_age_min` to `r participant_descriptives_final$years_age_max` years (M = `r papaja::apa_num(participant_descriptives_final$years_age_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$years_age_sd)`) and whose years of education ranged from `r participant_descriptives_final$years_education_min` to `r participant_descriptives_final$years_education_max` years (M = `r papaja::apa_num(participant_descriptives_final$years_education_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$years_education_sd)`). All data descriptions and results described below are based on this final sample. 
 
 ### Electrophysiological Data Acquisition
 
-Electrophysiological data acquisition for each participant was done within a dimly lit, radio frequency shielded, and sound attenuated chamber on three separate occasions. The time between the first and second occasion ranged from `r participant_descriptives_final$days_pre_to_post_min` to `r participant_descriptives_final$days_pre_to_post_max` days (M = `r papaja::apa_num(participant_descriptives_final$days_pre_to_post_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$days_pre_to_post_sd)`), and the time between the second and third occasion ranged from `r participant_descriptives_final$days_post_to_followup_min` to `r participant_descriptives_final$days_post_to_followup_max` days (M = `r papaja::apa_num(participant_descriptives_final$days_post_to_followup_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$days_post_to_followup_sd)`). On each occasion, an EasyCap electrolyte-gel-filled cap with 64 active electrodes following 10-10 positioning was used to continuously record electrophysiological activity at the scalp (Brain Products GmbH, Gilching, Germany). Channel Cz was used as the reference electrode. A Brain Vision Solutions actiCHamp amplifier was used to amplify microvolt signals from the electrodes and transform them into digital format for storage and analysis (Brain Products GmbH, Gilching, Germany). All data were sampled at 500 Hz, and band limited with a built-in 0.05-100 Hz band-pass filter. All electrode impedances were below 17 kW at the start of recording.
+Electrophysiological data acquisition for each participant was done within a dimly lit, radio frequency shielded, and sound attenuated chamber on three separate occasions. The time between the first and second occasion ranged from `r participant_descriptives_final$days_pre_to_post_min` to `r participant_descriptives_final$days_pre_to_post_max` days (M = `r papaja::apa_num(participant_descriptives_final$days_pre_to_post_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$days_pre_to_post_sd)`), and the time between the second and third occasion ranged from `r participant_descriptives_final$days_post_to_followup_min` to `r participant_descriptives_final$days_post_to_followup_max` days (M = `r papaja::apa_num(participant_descriptives_final$days_post_to_followup_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$days_post_to_followup_sd)`). On each occasion, an EasyCap electrolyte-gel-filled cap with 64 active electrodes positioned following the 10-10 system [@chatrianetal_TenPercentElectrode_1985; @chatrianetal_ModifiedNomenclature10_1988] was used to continuously record electrophysiological activity at the scalp (Brain Products GmbH, Gilching, Germany). Channel Cz was used as the reference electrode. A Brain Vision Solutions actiCHamp amplifier was used to amplify microvolt signals from the electrodes and transform them into digital format for storage and analysis (Brain Products GmbH, Gilching, Germany). All data were sampled at 500 Hz, and band limited with a built-in 0.05-100 Hz band-pass filter. All electrode impedances were below 17 kW at the start of recording.
 
 <!-- TODO: Consider actually getting the recording metadata such as lengths from MNE -->
 
@@ -25,19 +28,15 @@ Each participant underwent 80 minutes of EEG recording. We first collected ten m
 
 ### EEG preprocessing
 
-```{r preprocessing-descriptives}
-# TODO: read in targets
-```
-
 Raw EEG data was preprocessed to remove noise and non-neural artifacts from the data. All EEG preprocessing was done using the open source Python package MNE-Python [version 2.2.0, <https://doi.org/10.5281/zenodo.4338426>; @gramfortetal_MEGEEGData_2013]. The following steps were done to preprocess the raw EEG data from each recording.
 
 <!-- TODO: Update to reflect changes in targets pipeline -->
 
 First, following recommendations by @widmannetal_DigitalFilterDesign_2015, a two-pass forward and reverse, zero-phase, non-causal band-pass finite impulse response filter was used to remove slow drift potentials at infraslow frequencies less than 0.10 Hz, line noise at 60.00 Hz, and irrelevant noise fluctuations greater than 60.00 Hz [@decheveignenelken_FiltersWhenWhy_2019; @widmannetal_DigitalFilterDesign_2015]. The finite impulse response filter used a Hamming window with 0.0194 passband ripple and 53 dB stopband attenuation. The lower passband edge and transition bandwidth were set at 0.10 Hz (-12 dB cutoff frequency: 0.05 Hz), and the upper passband edge and transition bandwidth were set at 50.00 Hz (-12 dB cutoff frequency: 56.25 Hz). The filter length was 16501 samples (33.002 seconds). These filter parameters were selected after exploring the difference between raw and filtered signals and verifying that the selected filter parameters improved signal quality over alternative filter parameters or the raw signal [@widmannetal_DigitalFilterDesign_2015].[^2]
 
-Second, the data was downsampled from 500 to 200 Hz in order to reduce the size of the data and speed up computations operating on the data. <!-- TODO: talk about Nyquist frequency or whatever -->
+Second, the data was downsampled from 500 to 200 Hz in order to reduce the size of the data and speed up computations operating on the data. <!-- TODO: talk about Nyquist frequency or whatever, and how we don't need to worry about downsampling since we aren't interest in precise timings --> <!-- TODO: Decide if we'll drop downsampling for final results -->
 
-<!-- This would be first --> Third, data was rereferenced from Channel Cz, which served as the original reference electrode during recording, to a virtual common average reference electrode in order to reduce spatial biases in the signal amplitude of channels caused by their distance to the original reference electrode. Rereferencing was done by first adding Channel Cz to the data with its values set to zero, then averaging the signal over all channels and subtracting this average signal from each channel, which allowed each channel to contribute equally to the new reference.
+Third, data was rereferenced from Channel Cz, which served as the original reference electrode during recording, to a virtual common average reference electrode in order to reduce spatial biases in the signal amplitude of channels caused by their distance to the original reference electrode. Rereferencing was done by first adding Channel Cz to the data with its values set to zero, then calculating the average of the signal across all channels. This average signal was subtracted from each channel's signal, which allowed each channel to contribute equally to the new reference [@nunezsrinivasan_ElectricFieldsBrain_2006].
 
 <!-- https://www.brainlatam.com/blog/choosing-your-reference-for-an-eeg-recording-and-the-advantage-of-use-analyzer-696?email=cesarnoronha@brainsupport.co -->
 
@@ -45,14 +44,29 @@ Second, the data was downsampled from 500 to 200 Hz in order to reduce the size 
 
 Fourth, bad channels and segments were manually marked and removed to prepare the data for ICA decomposition. Channels were marked as bad if they contained excessive noise or drift for a significant portion of the recording. Segments were marked as bad if they contained excessive noise or drift that (1) could interfere with fitting the ICA decomposition due to the amount of variance their component would capture, or (2) was unlikely to be repaired by ICA decomposition. These were subjective judgements and we did our best to make consistent decisions about what was bad across recordings.
 
-Figure \@ref(fig:preprocessing-plots)A shows the number of bad channels marked per recording across the entire sample. Bad channels were marked in 26.2% <!-- TODO: add inline code --> of recordings, ranging from 1 to 7 <!-- TODO: add inline code --> bad channels marked per recording with a mode of 1 <!-- TODO: add inline code -->. Figure \@ref(fig:preprocessing-plots)B shows the number of times a given channel was marked bad across the entire sample. The number of times channels were marked bad followed a power law distribution, with the 20% most marked channels (T8, TP9, TP10, T7, FT7 <!-- TODO: add inline code -->) accounting for 55.91% <!-- TODO: add inline code --> of times a channel was marked bad across the entire sample. 
+```{r bad-channels-descriptives}
+tar_load(bad_channels_descriptives_final)
+```
+
+Figure \@ref(fig:preprocessing-plots)A shows the number of bad channels marked per recording across the entire sample. Bad channels were marked in 26.2% <!-- TODO: add inline code --> of recordings, ranging from 1 to 7 <!-- TODO: add inline code --> bad channels marked per recording with a mode of 1 <!-- TODO: add inline code -->. Figure \@ref(fig:preprocessing-plots)B shows the number of times a given channel was marked bad across the entire sample. The number of times channels were marked bad followed a power law distribution, with the 20% most marked channels (T8, TP9, TP10, T7, FT7 <!-- TODO: add inline code -->) accounting for 55.91% <!-- TODO: add inline code --> of times a channel was marked bad across the entire sample.
+
+```{r bad-channels-plots}
+tar_load(bad_channels_plots_final)
+```
+
+```{r bad-segments-descriptives}
+tar_load(bad_segments_descriptives_final)
+```
 
 Figure \@ref(fig:preprocessing-plots)C shows the number of bad segments marked per recording across the entire sample. Bad segments were marked in 94.05% <!-- TODO: add inline code --> of the recordings, ranging from 1 to 11 <!-- TODO: add inline code --> bad segments marked per recording with a mode of 1 <!-- TODO: add inline code -->. Figure \@ref(fig:preprocessing-plots)D shows the duration of bad segments in seconds across the entire sample. ... <!-- TODO: add descriptive stats about this part -->.
+
+```{r bad-segments-plots}
+tar_load(bad_segments_plots_final)
+```
 
 Fifth, ICA decomposition fitted using the Picard algorithm [@ablinetal_FasterICAOrthogonal_2017; @ablinetal_FasterIndependentComponent_2018] was performed to remove components carrying muscle artifacts or ocular artifacts (eye blinks, saccades, or horizontal eye movements) from the data. Components carrying artifacts were manually marked for removal.
 
 <!--
-
 TODO: Test sensitivity of results to different ICA configurations.
 
 Can try the following:
@@ -60,31 +74,17 @@ Can try the following:
 - Automated methods.
 -->
 
-Finally, the activity of bad channels removed in step four was interpolated using spherical splines [@perrinetal_SphericalSplinesScalp_1989] and the interpolated channels were put back into the data.
+Sixth, the activity of bad channels removed in step four was interpolated using spherical splines [@perrinetal_SphericalSplinesScalp_1989] and the interpolated channels were put back into the data. This was done to ensure the number of channels was constant across recordings.
 
-<!--
-Note: https://neuroimage.usc.edu/forums/t/downsampling-data-before-ica-processing/3064/5
-Apparently downsampling doesn't affect ICA results, so we could actually identify components on the downsampled data, but then apply the ICAs to the data sampled at the original rate.
--->
+Finally, the continuous data was divided into epochs and filtered to prepare for functional connectivity analysis. This was a three step process. First, the continuous data was divided into equally spaced, overlapping epochs. Epochs with an 8 second duration were created at 5 second intervals such that an epoch occurred---with reference to the continuous data---from 0-8 seconds, 5-13 seconds, 10-18 seconds, and so forth, until the end of the recording. Epochs that contained a bad segment were removed from the data. Second, the epoched data was filtered into five frequency bands---delta ($\delta$, 1-4 Hz), theta ($\theta$, 4-8 Hz), alpha ($\alpha$, 8-13 Hz), beta ($\beta$, 13-30 Hz), and gamma ($\gamma$, 30-50 Hz)---using a two-pass forward and reverse, zero-phase, non-causal band-pass finite impulse response filter. Third, epochs were cropped to a 5 second duration starting 1 second into each epoch such that an epoch then occurred from 1-6 seconds, 6-11 seconds, 11-16 seconds, and so forth, until the end of the recording.
 
-
-
-```{r preprocessing-plots}
-
-```
+The purpose of this three step process was as follows: Filtering the data into five frequency bands allowed us to investigate whether the organization of functional networks between and within individuals was dependent or invariant of temporal scale (frequency band), rather than assuming network organization was governed solely by broadband processes [@mostamesadaghiani_OscillationBasedConnectivityArchitecture_2021]. The five frequency bands we selected are thought to represent different neural processes [see @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020]. However, filtering epoched data creates edge artifacts at the start and end of each epoch. Creating longer epochs in the first step provided padding around the edges of each epoch that could be cropped in the third step to remove these edge artifacts; and overlapping epochs in the first step made it possible for the cropped epochs in the third step to be non-overlapping and contiguous with reference to the continuous data. The 5 second duration was selected based on the minimum epoch length required to get reliable phase coupling estimates in the delta band.
 
 ## Analyses
 
 ### Functional Connectivity
 
-<!-- TODO: Break this section into two: One for source reconstruction and one for functional connectivity. Follow what this paper did: Fraschini, M., Demuru, M., Crobe, A., Marrosu, F., Stam, C. J., & Hillebrand, A. (2016). The effect of epoch length on estimated EEG functional connectivity and brain network organisation. Journal of Neural Engineering, 13(3), 036015. doi:10.1088/1741-2560/13/3/036015  -->
-
-Whole brain functional networks were derived within individuals using static functional connectivity. Static functional connectivity between EEG channels was estimated in each of the canonical frequency bands using the following pipeline recommended by @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020. The exact decisions made at each step of the pipeline followed recommendations by @hassanwendling_ElectroencephalographySourceConnectivity_2018, @michelbrunet_EEGSourceImaging_2019, @oneilletal_DynamicsLargescaleElectrophysiological_2018, and  @schoffelengross_SourceConnectivityAnalysis_2009.
-
-First, epoching to remove bad segments...
-
-After preprocessing, EEG data was first filtered into five frequency bands thought to represent different neural processes [see @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020]: delta ($\delta$, 1-4 Hz), theta ($\theta$, 4-8 Hz), alpha ($\alpha$, 8-13 Hz), beta ($\beta$, 13-30 Hz), and gamma ($\gamma$, 30-50 Hz). Filtering the data into these separate frequency bands allows us to investigate whether the organization of functional networks between and within individuals is dependent or invariant of temporal scale (frequency band), rather than assuming network organization is governed solely by broadband processes [@mostamesadaghiani_OscillationBasedConnectivityArchitecture_2021].
-
+Whole brain functional networks were estimated within individuals using static functional connectivity. Static functional connectivity between EEG channels was estimated in each of the five frequency bands described in the previous section using the following pipeline recommended by @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020. The exact decisions made at each step of the pipeline followed recommendations by @hassanwendling_ElectroencephalographySourceConnectivity_2018, @michelbrunet_EEGSourceImaging_2019, @oneilletal_DynamicsLargescaleElectrophysiological_2018, and  @schoffelengross_SourceConnectivityAnalysis_2009.
 
 <!-- TODO: Add notes about appendix/supplement for label connectivity -->
 
