write more, edit, and reorganize

--- a/manuscripts/child-documents/methods.Rmd
+++ b/manuscripts/child-documents/methods.Rmd
@@ -20,13 +20,19 @@ The final sample used for analysis consisted of `r xfun::numbers_to_words(partic
 
 ### Electrophysiological Data Acquisition
 
-Electrophysiological data acquisition for each participant was done within a dimly lit, radio frequency shielded, and sound attenuated chamber on three separate occasions. The time between the first and second occasion ranged from `r participant_descriptives_final$days_pre_to_post_min` to `r participant_descriptives_final$days_pre_to_post_max` days (M = `r papaja::apa_num(participant_descriptives_final$days_pre_to_post_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$days_pre_to_post_sd)`), and the time between the second and third occasion ranged from `r participant_descriptives_final$days_post_to_followup_min` to `r participant_descriptives_final$days_post_to_followup_max` days (M = `r papaja::apa_num(participant_descriptives_final$days_post_to_followup_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$days_post_to_followup_sd)`). On each occasion, an EasyCap electrolyte-gel-filled cap with 64 active electrodes positioned following the 10-10 system [@chatrianetal_TenPercentElectrode_1985; @chatrianetal_ModifiedNomenclature10_1988] was used to continuously record electrophysiological activity at the scalp (Brain Products GmbH, Gilching, Germany). Channel Cz was used as the reference electrode. A Brain Vision Solutions actiCHamp amplifier was used to amplify microvolt signals from the electrodes and transform them into digital format for storage and analysis (Brain Products GmbH, Gilching, Germany). All data were sampled at 500 Hz, and band limited with a built-in 0.05-100 Hz band-pass filter. All electrode impedances were below 17 kW at the start of recording.
+Electrophysiological data acquisition for each participant was done within a dimly lit, radio frequency shielded, and sound attenuated chamber during three separate sessions. The time between the first and second session ranged from `r participant_descriptives_final$days_pre_to_post_min` to `r participant_descriptives_final$days_pre_to_post_max` days (M = `r papaja::apa_num(participant_descriptives_final$days_pre_to_post_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$days_pre_to_post_sd)`), and the time between the second and third session ranged from `r participant_descriptives_final$days_post_to_followup_min` to `r participant_descriptives_final$days_post_to_followup_max` days (M = `r papaja::apa_num(participant_descriptives_final$days_post_to_followup_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$days_post_to_followup_sd)`).
+
+During each session, an EasyCap electrolyte-gel-filled cap with 64 active electrodes positioned following the 10-10 system [@chatrianetal_TenPercentElectrode_1985; @chatrianetal_ModifiedNomenclature10_1988] was used to continuously record electrophysiological activity at the scalp (Brain Products GmbH, Gilching, Germany). Channel Cz was used as the reference electrode. A Brain Vision Solutions actiCHamp amplifier was used to amplify microvolt signals from the electrodes and transform them into digital format for storage and analysis (Brain Products GmbH, Gilching, Germany). All data were sampled at 500 Hz, and band limited with a built-in 0.05-100 Hz band-pass filter. All electrode impedances were below 17 kW at the start of recording.
 
 <!-- TODO: Consider actually getting the recording metadata such as lengths from MNE -->
 
-Each participant underwent 80 minutes of EEG recording. We first collected ten minutes of resting state data, in which participants had their eyes open for five minutes and their eyes closed for five minutes. The order of eyes open and eyes closed was counter-balanced across participants. This was followed by approximately 60 minutes of task state data collected during performance of a lexical decision task [for a detailed description, see @cnuddeetal_IncreasedNeuralEfficiency_2021]. Finally, ten more minutes of resting state data were collected, with the order of eyes open and eyes closed again being counter-balanced across participants. Across all three occasions, each participant was recorded for a total of 30 minutes during eyes open resting state (over 6 recordings), 30 minutes during eyes closed resting state (over 6 recordings), and 180 minutes during task state (over 3 recordings).
+Within a session, each participant was recorded for a total of 80 minutes. We first recorded ten minutes of resting state data, in which participants had their eyes open for five minutes and their eyes closed for five minutes. The order of eyes open and eyes closed was counter-balanced across participants. This was followed by approximately 60 minutes of task state data recorded during performance of a lexical decision task [for a detailed description, see @cnuddeetal_IncreasedNeuralEfficiency_2021]. Finally, ten more minutes of resting state data were recorded, with the order of eyes open and eyes closed again being counter-balanced across participants.
+
+Across all three sessions, each participant was recorded for a total of 30 minutes during eyes open resting state (over 6 recordings), 30 minutes during eyes closed resting state (over 6 recordings), and 180 minutes during task state (over 3 recordings).
 
 ### EEG preprocessing
+
+#### Removing noise and non-neural artifacts
 
 Raw EEG data was preprocessed to remove noise and non-neural artifacts from the data. All EEG preprocessing was done using the open source Python package MNE-Python [version 2.2.0, <https://doi.org/10.5281/zenodo.4338426>; @gramfortetal_MEGEEGData_2013]. The following steps were done to preprocess the raw EEG data from each recording.
 
@@ -74,11 +80,19 @@ Can try the following:
 - Automated methods.
 -->
 
-Sixth, the activity of bad channels removed in step four was interpolated using spherical splines [@perrinetal_SphericalSplinesScalp_1989] and the interpolated channels were put back into the data. This was done to ensure the number of channels was constant across recordings.
+Finally, the activity of bad channels removed in step four was interpolated using spherical splines [@perrinetal_SphericalSplinesScalp_1989] and the interpolated channels were put back into the data. This was done to ensure the number of channels was constant across recordings.
 
-Finally, the continuous data was divided into epochs and filtered to prepare for functional connectivity analysis. This was a three step process. First, the continuous data was divided into equally spaced, overlapping epochs. Epochs with an 8 second duration were created at 5 second intervals such that an epoch occurred---with reference to the continuous data---from 0-8 seconds, 5-13 seconds, 10-18 seconds, and so forth, until the end of the recording. Epochs that contained a bad segment were removed from the data. Second, the epoched data was filtered into five frequency bands---delta ($\delta$, 1-4 Hz), theta ($\theta$, 4-8 Hz), alpha ($\alpha$, 8-13 Hz), beta ($\beta$, 13-30 Hz), and gamma ($\gamma$, 30-50 Hz)---using a two-pass forward and reverse, zero-phase, non-causal band-pass finite impulse response filter. Third, epochs were cropped to a 5 second duration starting 1 second into each epoch such that an epoch then occurred from 1-6 seconds, 6-11 seconds, 11-16 seconds, and so forth, until the end of the recording.
+#### Preparing for functional connectivity analysis
 
-The purpose of this three step process was as follows: Filtering the data into five frequency bands allowed us to investigate whether the organization of functional networks between and within individuals was dependent or invariant of temporal scale (frequency band), rather than assuming network organization was governed solely by broadband processes [@mostamesadaghiani_OscillationBasedConnectivityArchitecture_2021]. The five frequency bands we selected are thought to represent different neural processes [see @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020]. However, filtering epoched data creates edge artifacts at the start and end of each epoch. Creating longer epochs in the first step provided padding around the edges of each epoch that could be cropped in the third step to remove these edge artifacts; and overlapping epochs in the first step made it possible for the cropped epochs in the third step to be non-overlapping and contiguous with reference to the continuous data. The 5 second duration was selected based on the minimum epoch length required to get reliable phase coupling estimates in the delta band.
+After removing noise and non-neural artifacts, the continuous data was divided into epochs and filtered to prepare for functional connectivity analysis. This was a three step process. First, the continuous data was divided into equally spaced, overlapping epochs. Epochs with an 8 second duration were created at 5 second intervals such that an epoch occurred---with reference to the continuous data---from 0-8 seconds, 5-13 seconds, 10-18 seconds, and so forth, until the end of the recording. Epochs that contained a bad segment were removed from the data. Second, the epoched data was filtered into five frequency bands---delta ($\delta$, 1-4 Hz), theta ($\theta$, 4-8 Hz), alpha ($\alpha$, 8-13 Hz), beta ($\beta$, 13-30 Hz), and gamma ($\gamma$, 30-50 Hz)---using a two-pass forward and reverse, zero-phase, non-causal band-pass finite impulse response filter. Third, epochs were cropped to a 5 second duration starting 1 second into each epoch such that an epoch then occurred from 1-6 seconds, 6-11 seconds, 11-16 seconds, and so forth, until the end of the recording.
+
+The purpose of this three step process was as follows: Filtering the data into five frequency bands allowed us to investigate whether the organization of functional networks between and within individuals was dependent or invariant of temporal scale (frequency band), rather than assuming network organization was governed solely by broadband processes [@mostamesadaghiani_OscillationBasedConnectivityArchitecture_2021]; the five frequency bands we selected are thought to represent different neural processes [see @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020]. However, filtering epoched data creates edge artifacts at the start and end of each epoch that distort the true signal. Creating longer epochs in the first step provided padding around the edges of each epoch that could be cropped in the third step to remove these edge artifacts; and overlapping epochs in the first step made it possible for the cropped epochs in the third step to be non-overlapping and contiguous with reference to the continuous data, preserving the true signal across the length of the recording. The 5 second duration was selected based on the minimum epoch length required to get reliable phase coupling estimates in the delta band.
+
+<!-- TODO: Add notes about appendix/supplement for label connectivity -->
+
+As a final preprocessing step, we originally planned for sensor space signal time courses to be source localized and reconstructed to regions of a common template whole-brain parcellation following the pipeline recommended by @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020 so that functional connectivity could estimated between pairs of cortical regions rather than pairs of EEG channels. Our motivation to transform the data from sensor space to source space was twofold: First, the location of EEG channels on the scalp does not easily translate to the location of the underlying neural sources, preventing the interpretation of sensor space functional networks in terms of neuroanatomy [@laietal_ComparisonScalpSourcereconstructed_2018]. Second, the effects of field spread and volume conduction in the head can cause multiple electrodes to record activity from the same underlying neural source, resulting in spurious functional connectivity estimates between channels in sensor space [@nunezsrinivasan_ElectricFieldsBrain_2006; @schoffelengross_SourceConnectivityAnalysis_2009]; by estimating the location of the underlying neural sources through source localization, functional connectivity can instead be estimated at the level of the underlying neural sources, reducing (but not mitigating) the spurious effects of field spread and volume conduction [@oneilletal_DynamicsLargescaleElectrophysiological_2018; @schoffelengross_SourceConnectivityAnalysis_2009].
+
+However, after examining the source space functional connectivity estimates (the functional connectivity metrics we used are described in the next step below), we found that they were largely noise---showing consistently low connectivity between all brain regions, regardless of recording or frequency band. In contrast, sensor space functional connectivity estimates showed appreciable levels of connectivity and variation across recordings and frequency bands. Given this discrepancy, we did not feel confident in the quality of the transformations made to the data during source localization and reconstruction, so we decided to forgo this step.
 
 ## Analyses
 
@@ -86,21 +100,23 @@ The purpose of this three step process was as follows: Filtering the data into f
 
 Whole brain functional networks were estimated within individuals using static functional connectivity. Static functional connectivity between EEG channels was estimated in each of the five frequency bands described in the previous section using the following pipeline recommended by @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020. The exact decisions made at each step of the pipeline followed recommendations by @hassanwendling_ElectroencephalographySourceConnectivity_2018, @michelbrunet_EEGSourceImaging_2019, @oneilletal_DynamicsLargescaleElectrophysiological_2018, and  @schoffelengross_SourceConnectivityAnalysis_2009.
 
-<!-- TODO: Add notes about appendix/supplement for label connectivity -->
-
-For a third step, we originally planned for sensor space signal time courses to be source localized and reconstructed to regions of a common template whole-brain parcellation so that (1) functional connectivity could estimated between pairs of brain regions rather than pairs of EEG channels; and (2) we could avoid some of the ambiguities associated with sensor space functional connectivity analysis, such as field spread [@oneilletal_DynamicsLargescaleElectrophysiological_2018; @schoffelengross_SourceConnectivityAnalysis_2009]. However, after examining the source space functional connectivity estimates (the functional connectivity metrics we used are described in the next step below), we found that they were largely noise---showing consistently low connectivity between all brain regions, regardless of recording or frequency band. In contrast, sensor space functional connectivity estimates showed appreciable levels of connectivity and variation across recordings and frequency bands. Given this discrepancy, we did not feel confident in the quality of the transformations made to the data during source localization and reconstruction, so we decided to forgo this step.
-
 <!-- TODO: Add equations for connectivity measures, talk about the range of values they can take and their interpretation -->
 
 Finally, oscillation-based functional connectivity was estimated between each pair of EEG channels, once using amplitude coupling and once using phase coupling. Phase and amplitude coupling are thought to reflect different but related neurophysiological functions and it is common to use both measures so they can be compared [@engeletal_IntrinsicCouplingModes_2013; @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020]. Specifically, amplitude coupling is thought to coordinate changes in (co)activation of brain areas on slow timescales, and phase coupling is thought to regulate the integration and flow of cognitive contents on fast timescales [@engeletal_IntrinsicCouplingModes_2013]. To reduce the influence of source signal leakage on the estimations of functional connectivity, amplitude coupling was calculated using the leakage controlled amplitude envelope correlation [@brookesetal_MeasuringFunctionalConnectivity_2012], and phase coupling was calculated using the phase lag index [@stametal_PhaseLagIndex_2007]. The resulting functional connectivity matrices (or functional connectomes) reflect electrophysiologically derived cortical functional networks for each frequency band using different oscillation-based measures.
+
+$$
+\mathit{PLI} = \vert \langle \mathrm{sign} [\Delta \phi(t_k)] \rangle \vert
+$$
+
+<!-- AEC formula https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5949275/ -->
 
 <!-- Should I mention something like this here? "The intracranial sources of scalp electric potential differences are thought to be cortical pyramidal neurons, which undergo post-synaptic potentials (PSP) that create an active, impressed current density. The dipolar nature (current density vector) of these sources is documented in (Mitzdorf 1985 and Martin 1992)." -->
 
 ### Functional connectome similarity
 
-<!-- TODO: Describe how performance of RV coefficient was evaluated. Maybe add equation. Maybe consider using the adjusted version instead. -->
+<!-- TODO: Describe how performance of RV coefficient was evaluated. Maybe add equation. -->
 
-The similarity of static functional connectomes across state (eyes open or eyes closed resting state), individual, and occasion within the delta, theta, alpha, beta, and gamma bands was next quantified by estimating the RV coefficient [@robertescoufier_UnifyingToolLinear_1976] between all pairs of functional connectomes from a given state, individual, and occasion. The RV coefficient is a multivariate measure of the linear relationship between two positive semi-definite matrices $\mathbf{X}$ and $\mathbf{Y}$ that takes values between 0 (no linear relationship) and 1 (perfect linear relationship) [@abdiherve_RVCoefficientCongruence_2007; @escoufier_TraitementVariablesVectorielles_1973; @josseholmes_MeasuringMultivariateAssociation_2016], given by
+The similarity of static functional connectomes across state (eyes open or eyes closed resting state), individual, and session within the delta, theta, alpha, beta, and gamma bands was next quantified by estimating the RV coefficient [@robertescoufier_UnifyingToolLinear_1976] between all pairs of functional connectomes from a given state, individual, and session. The RV coefficient is a multivariate measure of the linear relationship between two positive semi-definite matrices $\mathbf{X}$ and $\mathbf{Y}$ that takes values between 0 (no linear relationship) and 1 (perfect linear relationship) [@abdiherve_RVCoefficientCongruence_2007; @escoufier_TraitementVariablesVectorielles_1973; @josseholmes_MeasuringMultivariateAssociation_2016], given by
 
 $$
 \newcommand{\tr}{\mathop{\rm trace}}
@@ -115,7 +131,7 @@ $$
 where $\mathbf{S} = \mathbf{XX}^\mathsf{T}$ and 
 
 
-can be interpreted similarly to the Pearson correlation [@josseholmes_MeasuringMultivariateAssociation_2016].
+can be interpreted similarly to the squared Pearson correlation [@josseholmes_MeasuringMultivariateAssociation_2016].
 
 
 
@@ -123,16 +139,14 @@ can be interpreted similarly to the Pearson correlation [@josseholmes_MeasuringM
 The RV coefficient is a multivariate measure of association between two functional connectomes that can be interpreted similarly to the Pearson correlation [@josseholmes_MeasuringMultivariateAssociation_2016]. 
 
 
-These RV coefficients were then visualized with a heat map to examine the amount and pattern of similarity within states, individuals, occasions, and the entire sample.
+These RV coefficients were then visualized with a heat map to examine the amount and pattern of similarity within states, individuals, sessions, and the entire sample.
 
 <!-- TODO: Fix this part to reflect whatever changes we make -->
 
-Following this, the relative magnitude of influence that states, individuals, occasions, and their interactions have on similarity was calculated. This was done by first calculating the average of the RV coefficients across (1) all states, individuals, and occasions (group effect); (2) the same state but different individuals (state effect); (3) the same individual but different states and sessions (individual effect); (4) the same individual and session but different states (individual and session effect); and (5) the same individual and state but different sessions (individual and state effect). These effects were then compared using paired two-tailed t-test with p-values corrected using the false discovery rate.[^3]
+Following this, the relative magnitude of influence that states, individuals, sessions, and their interactions have on similarity was calculated. This was done by first fitting a mixed beta regression to the lower triangle of the similarity matrix. These effects were then compared using pairwise contrasts.
 
 <!-- Footnotes start ---------------------------------------------------------->
 
 [^2]: We may go back and refine the filter parameters further. After some peer review it was suggested that widening the highpass filter and increasing the cutoff might help with some artifacts that were difficult to clean.
-
-[^3]: We're basing this analysis off the @grattonetal_FunctionalBrainNetworks_2018 paper, but the description of the paired t-test comparisons in that paper doesn't make a lot of sense. My interpretation of their method leads me to think that each of the five effects has a different number of observations, but then a paired t-test would not be possible here. So we need data to play around with to figure out what's going on and to make sure this part of the analysis is statistically sound. 
 
 <!-- Footnotes end ---------------------------------------------------------->
